# fortran-strings

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  gen_docs.sh  makefile  strings.f90  test.f90
.github/workflows/: build_linux.yml
cmake/: PackageConfig.cmake.in
docs/: _r_e_a_d_m_e_8md.html  dir_17a966a1e13be437a91bb68d9e468740.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7a6499598ddcfcabe96e224cb4a6d834.html  dir_d71e95e6959f71fab033745697d158c0.html  doxygen_crawl.html  files.html  globals.html  globals_func.html  index.html  menudata.js  namespacemembers.html  namespaces.html  namespacestrings.html  strings_8f90.html  test__fortran__strings_8f90.html
docs/doxygen/: doxygen.config  doxygen.config.in
docs/html/: _r_e_a_d_m_e_8md.html  index.html  namespacemembers.html  strings_8f90.html
docs/html/search/: all_0.js  files_1.js  functions_0.js  namespaces_0.js
docs/latex/: files.tex  index.tex  namespaces.tex  namespacestrings.tex  refman.tex  strings_8f90.tex
docs/man/man3/: README.md.3  _Users_ericengle_Repos_GitHub_fortran-strings_src_.3  _Users_ericengle_Repos_GitHub_fortran-strings_tests_.3  noname  strings.3  strings.f90.3  test_fortran_strings.f90.3
docs/search/: all_0.js  all_2.js  all_3.js  files_2.js  functions_1.js  pages_1.js  searchdata.js
docs2/html/: files.html  namespacemembers_func.html
docs2/html/search/: functions_0.js
docs2/latex/: _r_e_a_d_m_e_8md.tex  files.tex  index.tex  strings_8f90.tex
docs2/man/man3/: README.md.3  strings.f90.3
src/: CMakeLists.txt  strings.f90
test/: test.f90  test.sh
tests/: CMakeLists.txt  test_fortran_strings.f90
v1.0.0/: _r_e_a_d_m_e_8md.html  namespacestrings.html
v1.0.0/search/: all_0.js  all_2.js  namespaces_0.js
v1.1.0/: files.html  index.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  namespacestrings.html  strings_8f90.html
v1.1.0/doxygen/: doxygen.config
v1.1.0/search/: all_2.js  files_1.js  functions_0.js
